@@ -14,6 +14,9 @@ Version 1.3.19+svn:
    * added new music track, "The King is Dead" by Mattias Westlund.
    * updated music track, "Traveling Minstrels" by Mattias Westlund.
    * changed the default story screen music from loyalists.ogg to revelation.ogg
+ * WML engine:
+   * fixed a bug where addons with recusive INCLUDES could no longer be loaded
+     (bug #11160)
  * miscellaneous and bug fixes:
    * units with a death sound but no death animation now play their death
      sound correctly
